--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
   <string name="pengarang">Pengarang</string>
   <string name="judul_buku">Judul Buku</string>
   <string name="kode_buku">Kode Buku</string>
-  <string name="input_data">INPUT DATA</string>
+  <string name="input_data">Input Data</string>
+  <string name="delete">Hapus</string>
 </resources>
